@@ -1,15 +1,0 @@
-#!/bin/sh
-set -e
-
-rm_diversion() {
-  dpkg-divert --package @GST_LIB_DEV@ --rename --remove "$1"
-}
-
-if [ "$1" = "remove" -o "$1" = "abort-install" -o "$1" = "disappear" ] ; then
-  rm_diversion /usr/bin/dh_gstscancodecs
-  rm_diversion /usr/share/man/man1/dh_gstscancodecs.1.gz
-fi
-
-#DEBHELPER#
-
-exit 0
